--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "next": "^14.2.35",
+    "nodemailer": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sharp": "^0.34.5"
   },
   "devDependencies": {
     "@types/node": "^25.2.0",
+    "@types/nodemailer": "^7.0.10",
     "@types/react": "^19.2.10",
     "autoprefixer": "^10.4.24",
     "postcss": "^8.5.6",
